<resources>
    <string name="app_name">bookApp</string>
    <string name="default_profile_image">Default Profile Image</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="image_4">Image 4</string>
    <string name="image_5">Image 5</string>
    <string name="image_6">Image 6</string>
    <string name ="add_book">add archive</string>
</resources>