<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="3"
    android:padding="16dp"
    android:gravity="center">

    <!-- Default Profile Image -->
    <ImageView
        android:id="@+id/imageDefault"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:src="@drawable/image1"
        android:contentDescription="@string/image_1"
        android:layout_row="0"
        android:layout_column="0"/>

    <!-- Image 2 -->
    <ImageView
        android:id="@+id/image2"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:src="@drawable/image2"
        android:contentDescription="@string/image_2"
        android:layout_row="0"
        android:layout_column="1"
        />

    <!-- Image 3 -->
    <ImageView
        android:id="@+id/image3"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_3"
        android:src="@drawable/image3"
        tools:ignore="GridLayout"
        android:layout_row="0"
        android:layout_column="2"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:src="@drawable/image4"
        android:contentDescription="@string/image_4"
        android:layout_row="1"
        android:layout_column="0"/>

    <!-- Image 5-->
    <ImageView
        android:id="@+id/image5"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:src="@drawable/image5"
        android:contentDescription="@string/image_5"
        android:layout_row="1"
        android:layout_column="1"/>

    <!-- Image 6-->
    <ImageView
        android:id="@+id/image6"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:src="@drawable/image6"
        android:contentDescription="@string/image_6"
        android:layout_row="1"
        android:layout_column="2"/>
</GridLayout>
